<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_next"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="?selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:text="@string/all_button_next" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Display2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:includeFontPadding="false"
                android:text="@string/carddetails_card_title"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/carddetails_subhead" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/card_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <cards.pay.sample.demo.widget.CardNumberEditText
                    android:id="@+id/card_number_field_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carddetails_card_number_field_label"
                    tools:text="1234 5678 9012 3456" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cardholder_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cardholder_field_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carddetails_cardholder_field_label"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textVisiblePassword|textCapCharacters"
                    tools:text="CARDHOLDER NAME" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/expiry_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <cards.pay.sample.demo.widget.CardDateEditText
                    android:id="@+id/expiry_date_field_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carddetails_expiry_date_field_label"
                    android:imeOptions="actionDone|flagNoExtractUi"
                    tools:text="01/21" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/scan_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/scan" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>