<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:navigationIcon="?homeAsUpIndicator" />

    <TextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/final_title"
        android:textColor="?android:textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/github_octocat"
            android:adjustViewBounds="true"
            android:layout_marginRight="8dp"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button_download_sdk"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="regular"
            android:textSize="20sp"
            android:text="@string/final_download_sdk_button" />

    </LinearLayout>

    <Button
        android:id="@+id/button_licence"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="regular"
        android:minHeight="32dp"
        android:text="@string/final_licence_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="#0000ee"
        android:textSize="12sp" />

</LinearLayout>